--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,11 @@
             </exclusion>
         </exclusions>
     </dependency>
+    <dependency>
+        <groupId>springframework</groupId>
+        <artifactId>spring-core</artifactId>
+        <version>1.2.6</version>
+    </dependency>
 </dependencies>
 <build>
     <plugins>
